--- a/css/styles.css
+++ b/css/styles.css
@@ -1,98 +1,260 @@
-/*********************************************************************************************/
-/*                                   Tag Selectors                                           */
-/*********************************************************************************************/
+/*************************************************************************************************/
+/*                                       Tag Selectors                                           */
+/*************************************************************************************************/
+
 a:link {
-  color: #d6e5fa;
+  color: #a2a8d3;
   text-decoration: none;
 }
 
 a:visited {
-  color: #d6e5fa;
+  color: #a2a8d3;
   text-decoration: none;
 }
 
 a:hover {
-  color: #fef6fb;
-  text-decoration: underline;
+  color: #443737;
+  text-decoration: none;
 }
 
 body {
-  background-color: #3c4245;
+  margin: auto;
+  text-align: center;
 }
 
 hr {
-  border-color: #719192;
-  border-style: ridge none none;
-  border-width: 0.3em;
-  width: 100%;
+  border-color: #757bbd;
+  border-style: solid none none;
+  border-width: 1px;
+  width: 97%;
 }
 
 h1 {
-  color: #dfcdc3;
-  font-family: "Courier New", system-ui;
+  color: #443737;
+  font-family: "Cutive Mono", monospace;
+  font-size: 250%;
+  font-weight: bold;
+  margin-top: auto;
+}
+
+h2 {
+  color: #a9aed6;
+  font-family: "Courier New", "Times New Roman";
+  font-size: 200%;
+  margin-top: auto;
 }
 
 h3 {
-  color: #dfcdc3;
-  font-family: "Courier New", system-ui;
-}
-
-label {
-  color: #dfcdc3;
-  font-family: "Courier New", system-ui;
+  color: #c6cbef;
+  font-family: "Courier New", "Times New Roman";
+  font-size:150%;
+  margin-top: auto;
 }
 
 p {
-  color: #dfcdc3;
-  font-family: "Courier New", system-ui;
+  font-family: 'Sorts Mill Goudy', serif;
+  color: #3c4245;
 }
 
-ul li {
-  color: #3c3c3c;
-  /* set color of list item text */
+pre {
+  font-family: 'Sorts Mill Goudy', serif;
+  color: #3c4245;
+}
+/*************************************************************************************************/
+/*                                      Class Selectors                                          */
+/*************************************************************************************************/
+.books {
+  height: 240px;
+  width: 240px;
+}
+
+.bottom-cloud {
+  left:250px;
+  position: absolute;
+  top: 230px;
+}
+
+.bottom-container {
+  background-color:  #d6e5fa;
+  margin-bottom: 0;
+  padding-bottom: 20px;
+  padding-top: 40px;
+}
+
+.computer {
+  height: 145px;
+  width: 164px;
+}
+
+.copyright {
+  margin: auto;
+  font-size: 85%;
+}
+
+.experience-header {
+  padding-top: 20px;
+}
+
+.exp-row {
+  margin: 20px;
+}
+
+.exp-1-header {
+  text-align: left;
+}
+
+.exp-1-info {
+  text-align: left;
+}
+
+.exp-1-left {
+  bottom: 35px;
   display: inline-block;
-  list-style: none;
-  margin: 0 0 16px 1.1225em;
-  /* Give the bullet room on the left hand side */
-  padding: 0;
+  height: 100px;
+  padding: 0px 30px 0px 0px;
+  position: relative;
+  text-align: center;
+  width: 311px;
+}
+.exp-1-right {
+  display: inline-block;
+  padding: 0px 0px 0px 30px;
+  position: relative;
+  text-align: center;
+}
+
+.exp-2-right {
+  display: inline-block;
+  height: 160px;
+  padding: 0px 0px 0px 5px;
+  position: relative;
+  right: 15px;
+  text-align: center;
+  width: 145px;
+}
+
+.exp-2-left {
+  display: inline-block;
+  padding: 0px 10px 0px 0px;
+  position: relative;
+  right: 58px;
+  text-align: left;
+}
+
+.exp-3-right {
+  bottom: 50px;
+  display: inline-block;
+  left: 81px;
+  position: relative;
+  text-align: left;
+}
+
+.exp-3-left {
+  display: inline-block;
+  left: 20px;
   position: relative;
 }
 
- ul li::before {
-  color: #dfcdc3;
-  /* color of bullet or square */
-  content: "\29BF";
-  /* Unicode of character to precede the list item */
-  display: block;
-  font-size: 1em;
-  /* use em or % */
-  left: -1.1225em;
-  /* use em, line up bullet flush with left hand side */
-    position: absolute;
-  /* Set the bullet positioned absolutely top left */
-  top: 0%;
-  /* use em or % */
+.footer-link {
+  margin: 0 10px 0 10px;
 }
 
-/*********************************************************************************************/
-/*                                 Class Selectors                                           */
-/*********************************************************************************************/
-th {
-    background-color: #719192;
+.info-container {
+  position: relative;
+  top: 120px;
 }
 
-.skillsTable,
-.expTable{
-  color: #dfcdc3;
-  font-family: "Courier New", system-ui;
+.info-container p {
+  font-family: "Courier New", "Times New Roman";
+  color: #443737;
 }
 
-.thExtra {
-  background-color: #719192;
-  column-width: 400px;
+.middle-container {
+  background-color: #FFFFFF;
+  padding-top: 50px;
 }
 
-.expTable td {
-  background-color: #5f6769;
-  padding: 10px;
+.mountain{
+  position: relative;
+  top: 100px;
+}
+
+.people {
+  position: relative;
+  height: 97px;
+  width: 311px;
+}
+
+.rep-models {
+  height: 160px;
+  width: 123px
+}
+
+.skill-row {
+  margin: 20px;
+}
+
+.skill-1-info {
+  text-align: left;
+}
+
+.skill-1-header {
+  text-align: left;
+}
+
+.skill-1-left {
+  display: inline-block;
+  padding: 0px 30px 0px 0px;
+  position: relative;
+}
+
+.skill-1-right {
+  display: inline-block;
+  padding: 0px 0px 0px 30px;
+  position: relative;
+  width: 200px;
+}
+
+.profile-pic {
+  height: 200px;
+  padding-bottom: 3px;
+  width: 200px;
+}
+
+.skills {
+  padding-top: 20px;
+}
+
+.top-cloud {
+  position: absolute;
+  top: 50px;
+  right: 250px;
+}
+
+.top-container {
+  background-color: #d6e5fa;
+  padding-top: 20px;
+  position: relative;
+  height:600px;
+  width: 100%;
+}
+
+/*************************************************************************************************/
+/*                                  Pseudo Class Selectors                                       */
+/*************************************************************************************************/
+
+::-webkit-scrollbar {
+    background-color: #d6e5fa ;
+    width: 14px;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #cccccc;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
