--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,11 @@
 /*                                       Tag Selectors                                           */
 /*************************************************************************************************/
 
+@viewport {
+  width: device-width ;
+  zoom: 1.0 ;
+}
+
 a:link {
   color: #a2a8d3;
   text-decoration: none;
